--- a/MauiAppHotel/App.xaml
+++ b/MauiAppHotel/App.xaml
@@ -5,6 +5,25 @@
              x:Class="MauiAppHotel.App">
     <Application.Resources>
         <ResourceDictionary>
+            <Style TargetType="Label">
+                <Setter Property="FontFamily" Value="Domine-SemiBold" />
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="TextColor" Value="Gray" />
+            </Style>
+
+            <Style TargetType="Button">
+                <Setter Property="FontFamily" Value="Domine-SemiBold" />
+                <Setter Property="FontSize" Value="18" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="BackgroundColor" Value="Green"/>
+                <Setter Property="CornerRadius" Value="20" />
+            </Style>
+
+            <Style TargetType="Entry">
+                <Setter Property="FontFamily" Value="Domine-Bold" />
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="TextColor" Value="Gray" />
+            </Style>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
