--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -3,9 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.ContratacaoHospedagem"
              Title="ContratacaoHospedagem"
-             NavigationPage.HasNavigationBar="False"
-             BackgroundColor="{StaticResource Gray300}">
-    
+             NavigationPage.HasNavigationBar="False">
+    <ContentPage.Background>
+        <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+            <GradientStop Color="CadetBlue" Offset="0.1"/>
+            <GradientStop Color="DarkSlateGray" Offset="0.5"/>
+            <GradientStop Color="CadetBlue" Offset="1.0"/>
+        </LinearGradientBrush>
+    </ContentPage.Background>
+
     <VerticalStackLayout VerticalOptions="CenterAndExpand"
                          Padding="10">
         <Label Text="Cálculo da Diária"
@@ -30,7 +36,8 @@
                              Increment="1"/>
 
                     <Label Grid.Row="1" Grid.Column="0"
-                    Text="Crianças:"/>
+                    Text="Crianças:"
+                           FontFamily="Domine-SemiBold"/>
                     <Label  Grid.Row="1" Grid.Column="1"
                             TextColor="{StaticResource White}"
                             Text="{Binding Value}"
@@ -44,9 +51,12 @@
 
                 </Grid>
 
-                <Label Text="Escolha sua Suíte"/>
+                <Label Text="Escolha sua Suíte"
+                       FontFamily="Domine-SemiBold"/>
                 <Picker x:Name="pck_quarto"
-                        Title="Selecione sua Acomodação"/>
+                        Title="Selecione sua Acomodação"
+                        FontFamily="Domine-SemiBold"
+                       ItemDisplayBinding = "{Binding Descricao}"/>
 
                 <Frame Padding="10"
                        Margin="10">
@@ -55,14 +65,15 @@
                         <HorizontalStackLayout>
 
                             <Label  Text="Check-in:"/>
-                            <DatePicker x:Name=" dtpck_checkin"
+                            <DatePicker x:Name="dtpck_checkin"
+                                        DateSelected="dtpck_checkin_DateSelected"
                                         Format="dd/MM/yyyy"/>
 
                         </HorizontalStackLayout>
                         <HorizontalStackLayout>
 
                             <Label  Text="Check-out:"/>
-                            <DatePicker x:Name=" dtpck_checkout"
+                            <DatePicker x:Name="dtpck_checkout"
                                         Format="dd/MM/yyyy"/>
 
                         </HorizontalStackLayout>
@@ -72,10 +83,12 @@
                 </Frame>
                 
                 <Button Text="Avançar" Clicked="Button_Clicked"
+                        HorizontalOptions="Center"
                         Padding="10"
-                        Margin="10"/>
+                        Margin="0"/>
 
                 <Button Text="Quem Somos" Clicked="Button_Clicked_1"
+                        HorizontalOptions="Center"
                         Padding="10"
                         Margin="10"/>
 
