--- a/MauiAppHotel/App.xaml
+++ b/MauiAppHotel/App.xaml
@@ -9,6 +9,8 @@
                 <Setter Property="FontFamily" Value="Domine-SemiBold" />
                 <Setter Property="FontSize" Value="16" />
                 <Setter Property="TextColor" Value="Gray" />
+                <Setter Property="VerticalTextAlignment" Value="Center"/>
+                <Setter Property="HorizontalTextAlignment" Value="Center"/>
             </Style>
 
             <Style TargetType="Button">
